--- a/before_augmentation_no_gridsearch.ipynb
+++ b/before_augmentation_no_gridsearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,19 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg = LogisticRegression()\n",
     "xgb = XGBClassifier()\n",
-    "svm = SVC()\n",
+    "svm = SVC(probability=True)\n",
     "models = [reg,xgb,svm]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -133,22 +133,31 @@
      "output_type": "stream",
      "text": [
       "Model: LogisticRegression\n",
-      "ROC AUC Score: 0.9666\n",
-      "Precision: 0.8933\n",
-      "Recall: 0.6837\n",
-      "F1 Score: 0.7746\n",
+      "ROC AUC Score: 0.9738\n",
+      "Precision: 0.8611\n",
+      "Recall: 0.6327\n",
+      "F1 Score: 0.7294\n",
       "Confusion Matrix:\n",
-      "[[56856     8]\n",
-      " [   31    67]]\n",
+      "[[56854    10]\n",
+      " [   36    62]]\n",
       "----------------------------------------\n",
       "Model: XGBClassifier\n",
-      "ROC AUC Score: 0.9705\n",
-      "Precision: 0.9512\n",
-      "Recall: 0.7959\n",
-      "F1 Score: 0.8667\n",
+      "ROC AUC Score: 0.9877\n",
+      "Precision: 0.9048\n",
+      "Recall: 0.7755\n",
+      "F1 Score: 0.8352\n",
       "Confusion Matrix:\n",
-      "[[56860     4]\n",
-      " [   20    78]]\n",
+      "[[56856     8]\n",
+      " [   22    76]]\n",
+      "----------------------------------------\n",
+      "Model: SVC\n",
+      "ROC AUC Score: 0.9440\n",
+      "Precision: 0.9296\n",
+      "Recall: 0.6735\n",
+      "F1 Score: 0.7811\n",
+      "Confusion Matrix:\n",
+      "[[56859     5]\n",
+      " [   32    66]]\n",
       "----------------------------------------\n"
      ]
     }
@@ -165,21 +174,17 @@
     "        ]\n",
     "    )\n",
     "    \n",
-    "    # Fit the pipeline on the training data\n",
     "    pipe.fit(X_train, y_train)\n",
     "    \n",
-    "    # Make predictions on the validation data\n",
     "    y_val_pred = pipe.predict(X_validation)\n",
     "    y_val_prob = pipe.predict_proba(X_validation)[:, 1]\n",
     "    \n",
-    "    # Calculate performance metrics\n",
     "    roc_auc = roc_auc_score(y_validation, y_val_prob)\n",
     "    precision = precision_score(y_validation, y_val_pred)\n",
     "    recall = recall_score(y_validation, y_val_pred)\n",
     "    f1 = f1_score(y_validation, y_val_pred)\n",
     "    conf_matrix = confusion_matrix(y_validation, y_val_pred)\n",
     "    \n",
-    "    # Print the model's performance\n",
     "    print(f\"Model: {model.__class__.__name__}\")\n",
     "    print(f\"ROC AUC Score: {roc_auc:.4f}\")\n",
     "    print(f\"Precision: {precision:.4f}\")\n",
