--- a/before_and_after_augmentation.ipynb
+++ b/before_and_after_augmentation.ipynb
@@ -621,6 +621,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using multiple techniques and comparing them for data augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-11 22:41:39,614:INFO:NoSMOTE: Running sampling via ('NoSMOTE', \"{'raise_value_error': False, 'raise_runtime_error': False, 'random_state': None, 'class_name': 'NoSMOTE'}\")\n",
+      "2024-10-11 22:41:40,426:INFO:SMOTE: Running sampling via ('SMOTE', \"{'proportion': 1.0, 'n_neighbors': 5, 'nn_params': {}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'SMOTE'}\")\n",
+      "2024-10-11 22:41:40,433:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 22:41:40,434:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
+      "2024-10-11 22:41:40,453:INFO:SMOTE: simplex sampling with n_dim 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: LogisticRegression\n",
+      "ROC AUC Score: 0.9854\n",
+      "Precision: 0.8710\n",
+      "Recall: 0.7500\n",
+      "F1 Score: 0.8060\n",
+      "Confusion Matrix:\n",
+      "[[22767     4]\n",
+      " [    9    27]]\n",
+      "----------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-11 22:41:42,568:INFO:Borderline_SMOTE1: Running sampling via ('Borderline_SMOTE1', \"{'proportion': 1.0, 'n_neighbors': 5, 'k_neighbors': 5, 'nn_params': {}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'Borderline_SMOTE1'}\")\n",
+      "2024-10-11 22:41:42,574:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 22:41:42,602:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
+      "2024-10-11 22:41:42,702:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 22:41:42,704:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
+      "2024-10-11 22:41:42,711:INFO:Borderline_SMOTE1: simplex sampling with n_dim 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: LogisticRegression\n",
+      "ROC AUC Score: 0.9686\n",
+      "Precision: 0.7317\n",
+      "Recall: 0.8333\n",
+      "F1 Score: 0.7792\n",
+      "Confusion Matrix:\n",
+      "[[22760    11]\n",
+      " [    6    30]]\n",
+      "----------------------------------------\n",
+      "Model: LogisticRegression\n",
+      "ROC AUC Score: 0.9837\n",
+      "Precision: 0.8333\n",
+      "Recall: 0.8333\n",
+      "F1 Score: 0.8333\n",
+      "Confusion Matrix:\n",
+      "[[22765     6]\n",
+      " [    6    30]]\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import smote_variants as sv\n",
+    "methods = [\n",
+    "    'NoSMOTE',\n",
+    "    'SMOTE',\n",
+    "    'Borderline_SMOTE1'\n",
+    "]\n",
+    "for method in methods:\n",
+    "    oversampler_class = getattr(sv, method)\n",
+    "    oversampler = oversampler_class()\n",
+    "    X_samp, y_samp= oversampler.sample(X_train, y_train)\n",
+    "    xgb_model = XGBClassifier()\n",
+    "    xgb_model.fit(X_samp,y_samp)\n",
+    "    y_validation = xgb_model.predict(X_val)\n",
+    "    y_validation_prob = xgb_model.predict_proba(X_val)[:,1]\n",
+    "    roc_auc = roc_auc_score(y_val, y_validation_prob)\n",
+    "    precision = precision_score(y_val, y_validation)\n",
+    "    recall = recall_score(y_val, y_validation)\n",
+    "    f1 = f1_score(y_val, y_validation)\n",
+    "    conf_matrix = confusion_matrix(y_val, y_validation)\n",
+    "        \n",
+    "    print(f\"Model: {logistic_model.__class__.__name__}\")\n",
+    "    print(f\"ROC AUC Score: {roc_auc:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 Score: {f1:.4f}\")\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(conf_matrix)\n",
+    "    print(\"-\" * 40)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
