--- a/before_and_after_augmentation.ipynb
+++ b/before_and_after_augmentation.ipynb
@@ -651,24 +651,114 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "methods = [\n",
     "    'NoSMOTE',\n",
     "    'SMOTE',\n",
-    "    'Borderline_SMOTE1'\n",
+    "    'SMOTE_TomekLinks',\n",
+    "    'SMOTE_ENN',\n",
+    "    'Borderline_SMOTE1',\n",
+    "    'Borderline_SMOTE2',\n",
+    "    'ADASYN',\n",
+    "    'AHC',\n",
+    "    'LLE_SMOTE',\n",
+    "    'distance_SMOTE',\n",
+    "    'SMMO',\n",
+    "    'polynom_fit_SMOTE_bus',\n",
+    "    'polynom_fit_SMOTE_mesh',\n",
+    "    'polynom_fit_SMOTE_star',\n",
+    "    'polynom_fit_SMOTE_poly',\n",
+    "    'Stefanowski',\n",
+    "    'Safe_Level_SMOTE',\n",
+    "    'MSMOTE',\n",
+    "    'DE_oversampling',\n",
+    "    'SMOBD',\n",
+    "    'SUNDO',\n",
+    "    'MSYN',\n",
+    "    'SVM_balance',\n",
+    "    'TRIM_SMOTE',\n",
+    "    'SMOTE_RSB',\n",
+    "    'ProWSyn',\n",
+    "    'SL_graph_SMOTE',\n",
+    "    'NRSBoundary_SMOTE',\n",
+    "    'LVQ_SMOTE',\n",
+    "    'SOI_CJ',\n",
+    "    'ROSE',\n",
+    "    'SMOTE_OUT',\n",
+    "    'SMOTE_Cosine',\n",
+    "    'Selected_SMOTE',\n",
+    "    'LN_SMOTE',\n",
+    "    'MWMOTE',\n",
+    "    'PDFOS',\n",
+    "    'IPADE_ID',\n",
+    "    'RWO_sampling',\n",
+    "    'NEATER',\n",
+    "    'DEAGO',\n",
+    "    'Gazzah',\n",
+    "    'MCT',\n",
+    "    'ADG',\n",
+    "    'SMOTE_IPF',\n",
+    "    'KernelADASYN',\n",
+    "    'MOT2LD',\n",
+    "    'V_SYNTH',\n",
+    "    'OUPS',\n",
+    "    'SMOTE_D',\n",
+    "    'SMOTE_PSO',\n",
+    "    'CURE_SMOTE',\n",
+    "    'SOMO',\n",
+    "    'ISOMAP_Hybrid',\n",
+    "    'CE_SMOTE',\n",
+    "    'Edge_Det_SMOTE',\n",
+    "    'CBSO',\n",
+    "    'E_SMOTE',\n",
+    "    'DBSMOTE',\n",
+    "    'ASMOBD',\n",
+    "    'Assembled_SMOTE',\n",
+    "    'SDSMOTE',\n",
+    "    'DSMOTE',\n",
+    "    'G_SMOTE',\n",
+    "    'NT_SMOTE',\n",
+    "    'Lee',\n",
+    "    'SPY',\n",
+    "    'SMOTE_PSOBAT',\n",
+    "    'MDO',\n",
+    "    'Random_SMOTE',\n",
+    "    'ISMOTE',\n",
+    "    'VIS_RST',\n",
+    "    'GASMOTE',\n",
+    "    'A_SUWO',\n",
+    "    'SMOTE_FRST_2T',\n",
+    "    'AND_SMOTE',\n",
+    "    'NRAS',\n",
+    "    'AMSCO',\n",
+    "    'SSO',\n",
+    "    'NDO_sampling',\n",
+    "    'DSRBF',\n",
+    "    'Gaussian_SMOTE',\n",
+    "    'kmeans_SMOTE',\n",
+    "    'Supervised_SMOTE',\n",
+    "    'SN_SMOTE',\n",
+    "    'CCR',\n",
+    "    'ANS',\n",
+    "    'cluster_SMOTE',\n",
+    "    'SYMPROD',\n",
+    "    'SMOTEWB'\n",
     "]\n",
     "\n",
     "best_method = None\n",
     "best_tpr = 0  \n",
     "best_metrics = {}\n",
+    "X_train = X_train.astype('float32')\n",
     "\n",
     "with open(\"model_output.txt\", \"w\") as file:\n",
     "    for method in methods:\n",
     "        oversampler_class = getattr(sv, method)\n",
     "        oversampler = oversampler_class()\n",
     "\n",
-    "        X_samp, y_samp = oversampler.sample(X_train, y_train)\n",
+    "        try:\n",
+    "            X_samp, y_samp = oversampler.sample(X_train, y_train)\n",
+    "        except Exception as e:\n",
+    "            file.write(f\"Error with {method}: {str(e)}\\n\")\n",
+    "            continue\n",
     "\n",
     "        xgb_model = XGBClassifier()\n",
     "        xgb_model.fit(X_samp, y_samp)\n",
