--- a/before_and_after_augmentation.ipynb
+++ b/before_and_after_augmentation.ipynb
@@ -629,24 +629,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-11 22:56:42,691:INFO:NoSMOTE: Running sampling via ('NoSMOTE', \"{'raise_value_error': False, 'raise_runtime_error': False, 'random_state': None, 'class_name': 'NoSMOTE'}\")\n",
-      "2024-10-11 22:56:43,548:INFO:SMOTE: Running sampling via ('SMOTE', \"{'proportion': 1.0, 'n_neighbors': 5, 'nn_params': {}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'SMOTE'}\")\n",
-      "2024-10-11 22:56:43,556:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
-      "2024-10-11 22:56:43,557:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
-      "2024-10-11 22:56:43,573:INFO:SMOTE: simplex sampling with n_dim 2\n",
-      "2024-10-11 22:56:46,083:INFO:Borderline_SMOTE1: Running sampling via ('Borderline_SMOTE1', \"{'proportion': 1.0, 'n_neighbors': 5, 'k_neighbors': 5, 'nn_params': {}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'Borderline_SMOTE1'}\")\n",
-      "2024-10-11 22:56:46,090:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
-      "2024-10-11 22:56:46,124:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
-      "2024-10-11 22:56:46,241:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
-      "2024-10-11 22:56:46,243:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
-      "2024-10-11 22:56:46,254:INFO:Borderline_SMOTE1: simplex sampling with n_dim 2\n"
+      "2024-10-11 23:57:40,810:INFO:NoSMOTE: Running sampling via ('NoSMOTE', \"{'raise_value_error': False, 'raise_runtime_error': False, 'random_state': None, 'class_name': 'NoSMOTE'}\")\n",
+      "2024-10-11 23:57:42,695:INFO:SMOTE: Running sampling via ('SMOTE', \"{'proportion': 1.0, 'n_neighbors': 5, 'nn_params': {}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'SMOTE'}\")\n",
+      "2024-10-11 23:57:42,701:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 23:57:42,706:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
+      "2024-10-11 23:57:42,754:INFO:SMOTE: simplex sampling with n_dim 2\n",
+      "2024-10-11 23:57:45,707:INFO:SMOTE_TomekLinks: Running sampling via ('SMOTE_TomekLinks', \"{'proportion': 1.0, 'n_neighbors': 5, 'nn_params': {}, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': None}, 'n_jobs': 1, 'random_state': None, 'class_name': 'SMOTE_TomekLinks'}\")\n",
+      "2024-10-11 23:57:45,713:INFO:SMOTE: Running sampling via ('SMOTE', \"{'proportion': 1.0, 'n_neighbors': 5, 'nn_params': {'metric_tensor': None}, 'n_jobs': 1, 'ss_params': {'n_dim': 2, 'simplex_sampling': 'random', 'within_simplex_sampling': 'random', 'gaussian_component': {}}, 'random_state': None, 'class_name': 'SMOTE'}\")\n",
+      "2024-10-11 23:57:45,720:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 23:57:45,721:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n",
+      "2024-10-11 23:57:45,750:INFO:SMOTE: simplex sampling with n_dim 2\n",
+      "2024-10-11 23:57:46,290:INFO:TomekLinkRemoval: Running noise removal.\n",
+      "2024-10-11 23:57:46,298:INFO:NearestNeighborsWithMetricTensor: NN fitting with metric minkowski\n",
+      "2024-10-11 23:57:46,318:INFO:NearestNeighborsWithMetricTensor: kneighbors query minkowski\n"
      ]
     }
    ],
